--- a/scss/main.scss
+++ b/scss/main.scss
@@ -46,6 +46,7 @@ html {
     width: 100vw;
     max-width: 100%;
     min-width: 300px;
+    min-height: 500px;
 
     @media (orientation: landscape) {
         flex-direction: row;
@@ -59,7 +60,7 @@ html {
 
 .wrapStart {
     height: 100vh;
-    margin-top: 20px;
+    margin-top: 50px;
 
     @media (orientation: landscape) and (min-width: 1024px) {
         margin-top: 150px;
@@ -70,6 +71,10 @@ html {
 .wrapAbout {
     margin-bottom: 30px;
 
+    @media (orientation: portrait) {
+        margin-top: 50px;
+    }
+
     @media (orientation: landscape) and (min-width: 1024px) {
         margin-top: 0;
     }
@@ -79,6 +84,7 @@ html {
     margin: 0 20px 20px;
     flex-grow: 1;
     max-width: 100%;
+    min-height: 300px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -164,12 +170,17 @@ p,
 
 
 .columnImages {
-    max-width: 90%;
-    flex-grow: 2;
+    max-width: 80%;
+    min-height: 200px;
+    flex-grow: 4;
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
     overflow: hidden;
+
+    @media (orientation: portrait) and (min-height: 600px) {
+        max-width: 90%;
+    }
 
     @media (orientation: landscape) {
         max-width: 50%;
